--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -14,7 +14,8 @@
 	--color-light: #f9fbf9;
 	--color-light-blue: #f9fbfa;
 
-	--background-image-hero: linear-gradient(
+	--background-image-hero:
+		linear-gradient(
 			90deg,
 			rgba(12, 45, 24, 0.97) 100%,
 			rgba(12, 45, 24, 0.97) 100%
@@ -25,19 +26,22 @@
 		rgba(8, 32, 16, 1) 0%,
 		rgba(8, 32, 16, 0) 78%
 	);
-	--background-image-cta: linear-gradient(
+	--background-image-cta:
+		linear-gradient(
 			90deg,
 			rgba(12, 45, 24, 0.97) 100%,
 			rgba(12, 45, 24, 0.97) 100%
 		),
 		url(../images/cta-bg.jpg);
-	--background-image-cta-1: linear-gradient(
+	--background-image-cta-1:
+		linear-gradient(
 			90deg,
 			rgba(12, 45, 24, 0.97) 100%,
 			rgba(12, 45, 24, 0.97) 100%
 		),
 		url(../images/cta-bg-1.jpg);
-	--background-image-footer: linear-gradient(
+	--background-image-footer:
+		linear-gradient(
 			90deg,
 			rgba(12, 45, 24, 0.97) 100%,
 			rgba(12, 45, 24, 0.97) 100%
@@ -92,29 +96,29 @@
 		@apply mx-auto px-6 max-w-[1440px];
 	}
 
-	.d2c_title {
+	.title {
 		@apply text-[32px] md:text-4xl xl:text-5xl 2xl:text-5xl-1 capitalize leading-[1.2];
 	}
 
-	.d2c_subtitle {
+	.subtitle {
 		@apply text-sm md:text-sm font-bold text-secondary rounded-full border px-5 py-2 inline-flex items-center justify-center border-[#C2D6C9]/20 mb-2 leading-[1.1] font-secondary;
 	}
 
-	.d2c_btn {
+	.btn {
 		@apply font-secondary cursor-pointer font-medium relative inline-flex items-center gap-4 overflow-hidden rounded-full px-6 pr-16 py-3 text-white hover:text-secondary transition-all capitalize bg-secondary;
 	}
 
-	.d2c_btn_expand {
+	.btn_expand {
 		@apply bg-primary rounded-full text-secondary transition-all duration-300 ease-in-out absolute top-[2px] bottom-[2px] right-[2px] w-auto flex justify-end;
 	}
-	.d2c_btn:hover .d2c_btn_expand {
+	.btn:hover .btn_expand {
 		@apply transition-all duration-300 ease-in-out !left-[2px];
 	}
-	.d2c_btn_icon {
+	.btn_icon {
 		@apply inline-flex items-center h-full justify-center aspect-square;
 	}
 
-	.d2c_section_header {
+	.section_header {
 		@apply text-center md:max-w-[85%] lg:max-w-[75%] xl:max-w-[70%] mx-auto space-y-4 mb-10;
 	}
 
@@ -124,7 +128,7 @@
 	}
 
 	/* Card text */
-	.d2c_card_text {
+	.card_text {
 		@apply text-base;
 	}
 
@@ -132,17 +136,17 @@
 	#navbar {
 		@apply z-30;
 	}
-	.d2c_navbar {
+	.navbar {
 		@apply bg-[#22442e] border-b !border-b-neutral-light/10 py-4;
 	}
-	.d2c_navbar .d2c_btn {
+	.navbar .btn {
 		@apply px-6 lg:px-10 py-2 lg:py-3;
 	}
-	#d2c_nav_link_wrapper .nav_link,
+	#nav_link_wrapper .nav_link,
 	#mobile-menu .nav_link {
 		@apply text-neutral-light inline-block text-base font-secondary font-medium transition duration-300 capitalize py-2 px-4 mb-0 hover:bg-neutral-light/10 border border-transparent hover:border hover:border-neutral-light/10 rounded-full leading-[1.1];
 	}
-	#d2c_nav_link_wrapper .nav_link.active {
+	#nav_link_wrapper .nav_link.active {
 		@apply bg-neutral-light/10 border border-neutral-light/10;
 	}
 	/* mobile menu styles */
@@ -169,59 +173,59 @@
 	}
 
 	/* Hero image slider */
-	.d2c_hero_img_slider .swiper-slide-active .bg-hero-slider {
+	.hero_img_slider .swiper-slide-active .bg-hero-slider {
 		@apply !opacity-100;
 	}
-	.d2c_hero_img_slider .d2c_slide_item {
+	.hero_img_slider .slide_item {
 		@apply rounded h-[300px] lg:h-[438px] w-full relative;
 	}
-	.d2c_hero_img_slider .d2c_slide_item img {
+	.hero_img_slider .slide_item img {
 		@apply rounded w-full h-full object-cover;
 	}
-	.d2c_hero_img_slider .d2c_hover_content {
+	.hero_img_slider .hover_content {
 		@apply absolute inset-0 rounded flex items-end justify-center p-8 opacity-0 transition-all;
 	}
-	.d2c_hero_img_slider .swiper-pagination-bullet {
+	.hero_img_slider .swiper-pagination-bullet {
 		@apply !bg-primary w-2 h-2 opacity-100;
 	}
-	.d2c_hero_img_slider .swiper-pagination-bullet-active {
+	.hero_img_slider .swiper-pagination-bullet-active {
 		@apply !bg-primary;
 	}
 
 	/* About section */
-	.d2c_about_icon {
+	.about_icon {
 		@apply w-24 h-24 xl:w-40 xl:h-40 rounded-full p-4 border-5 border-white bg-secondary absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 shadow-md flex items-center justify-center;
 	}
 	/* Process section */
-	.d2c_process_image {
+	.process_image {
 		@apply rounded w-full object-cover h-[250px] md:h-[300px] lg:h-[400px] xl:h-[450px] 2xl:h-[530px];
 	}
-	.d2c_process_image_overlay {
+	.process_image_overlay {
 		@apply bg-secondary-dark/20 absolute inset-0 rounded;
 	}
 
 	/* Call to action section small image size */
-	.d2c_small_image_right,
-	.d2c_small_image {
+	.small_image_right,
+	.small_image {
 		@apply w-[120px] h-[110px] xl:w-[154px] xl:h-[140px] relative;
 	}
-	.d2c_small_image img {
+	.small_image img {
 		@apply w-full h-full object-cover rounded;
 	}
 
 	/* Testimonial */
-	.d2c_testimonial_card {
+	.testimonial_card {
 		@apply bg-light-blue p-6 xl:p-8 rounded min-h-[300px] md:min-h-[410px] flex flex-col justify-between;
 	}
 
 	/* Pricing card */
-	.d2c_pricing_card {
+	.pricing_card {
 		@apply py-10 px-6 xl:py-14 xl:px-10 space-y-5 bg-light-blue rounded;
 	}
-	.d2c_pricing_card ul li {
+	.pricing_card ul li {
 		@apply text-sm xl:text-base;
 	}
-	.d2c_price {
+	.price {
 		@apply py-5 border-y border-y-[#C2D6C9]/20 text-secondary-dark text-3xl font-primary;
 	}
 
@@ -235,29 +239,31 @@
 	.accordion-content {
 		@apply overflow-hidden max-h-0 transition duration-300;
 	}
-	.accordion-header .d2c_question {
+	.accordion-header .question {
 		@apply text-base md:text-lg text-secondary capitalize;
 	}
-	.d2c_answer {
+	.answer {
 		@apply pt-4 border-t border-t-[#C2D6C9]/20;
 	}
 	.accordion-content {
-		transition: max-height 0.3s ease-out, padding 0.3s ease;
+		transition:
+			max-height 0.3s ease-out,
+			padding 0.3s ease;
 	}
 	/* Blog Post */
-	.d2c_post_image {
+	.post_image {
 		@apply w-full h-[230px] xl:h-[330px] object-cover rounded;
 	}
-	.d2c_blog_title {
+	.blog_title {
 		@apply hover:text-primary transition-all text-xl xl:text-2xl;
 	}
 
 	/* Bottom to top ScrollBtn */
-	.d2c_scroll_btn {
-		@apply flex items-center justify-center bg-secondary text-neutral-light text-xl rounded w-8 h-8 fixed z-30 bottom-8 right-8 md:right-24 border border-solid border-neutral-light/10 transition-all duration-300 hover:text-white hover:bg-primary hover:border-primary;
+	.scroll_btn {
+		@apply flex items-center justify-center bg-secondary text-neutral-light text-xl rounded w-8 h-8 fixed z-30 bottom-4 right-4 border border-solid border-neutral-light/10 transition-all duration-300 hover:text-white hover:bg-primary hover:border-primary;
 	}
 	#scrollBtn {
-		@apply hidden fixed bottom-5 right-5 z-30;
+		@apply hidden fixed bottom-4 right-4 z-30;
 	}
 	#scrollBtn.show {
 		@apply block;
@@ -270,19 +276,19 @@
 	footer ul li a {
 		@apply text-[#C2D6C9] hover:text-primary transition-all duration-600 text-lg py-1 inline-block;
 	}
-	.d2c_footer_content h4 {
+	.footer_content h4 {
 		@apply text-lg mb-4 text-white;
 	}
 	/* copyright */
-	.d2c_copyright p,
-	.d2c_copyright ul li a {
+	.copyright p,
+	.copyright ul li a {
 		@apply text-sm lg:text-base xl:text-lg text-[#C2D6C9]/60;
 	}
 }
 
 @layer utilities {
 	/* Testimonial linear css */
-	.d2c_testimonial_slider .swiper-wrapper {
+	.testimonial_slider .swiper-wrapper {
 		-webkit-transition-timing-function: linear !important;
 		transition-timing-function: linear !important;
 	}
@@ -297,29 +303,30 @@
 	@keyframes bounce-slow {
 		0%,
 		100% {
-			transform: translateY(0px);
+			transform: translateY(-5%);
+			animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
 		}
 		50% {
-			transform: translateY(10px);
+			transform: none;
+			animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
 		}
 	}
-
 	@keyframes scale-slow {
 		0%,
 		100% {
-			transform: scale(0.95);
+			transform: scale(1);
 		}
 		50% {
-			transform: scale(1);
+			transform: scale(1.05);
 		}
 	}
 }
 
 /*
 Template Name: Cruz Remodeling - Clean NextJs Template for Home Remodelling
-Template URL: https://designtocodes.com/product/effixpert-clean-nextjs-template-for-home-remodelling
+Template URL: https://cruzremodeling.com
 Description: Home Remodeling Framer Template that creates a high-converting remodeling website with Cruz Remodeling - Home Remodelling Website Template. Purchase now!
-Author: DesignToCodes
-Author URL: https://designtocodes.com
+Author: Cruz Remodeling
+Author URL: https://cruzremodeling.com
 Text Domain: Cruz Remodeling | Next.js | Portfolio Template
 */
