feat: Updates hero images

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -166,10 +166,10 @@
 		@apply flex flex-col space-y-4 mt-8;
 	}
 	#mobile-nav-links .nav_link {
-		@apply block w-full text-white capitalize p-2 rounded bg-[#C2D6C9]/10 text-center mb-2 transition-all duration-600;
+		@apply block w-full text-white capitalize py-8 px-6 text-3xl font-medium transition-all duration-300 hover:text-primary !border-transparent !bg-transparent hover:!bg-transparent hover:!border-transparent;
 	}
 	#mobile-nav-links .nav_link.active {
-		@apply bg-primary transition-all duration-600 text-secondary;
+		@apply text-primary !border-transparent !bg-transparent;
 	}
 
 	/* Hero image slider */
